# python-gedcom

./: .gitignore  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
docs/gedcom/: detect.html  errors.html  helpers.html  index.html  parser.html  reader.html  records.html  standards.html  tags.html
gedcom/: __init__.py  detect.py  errors.py  gedcom.md  helpers.py  parser.py  reader.py  records.py  standards.py  tags.py
gedcom/element/: __init__.py  element.py  family.py  header.py  individual.py  note.py  object.py  repository.py  root.py  source.py  submission.py  submitter.py
gedcom/elements/: __init__.py  element.py  family.py  header.py  individual.py  note.py  object.py  repository.py  root.py  source.py  submission.py  submitter.py
gedcom/subparsers/: __init__.py  address_structure.py  association_structure.py  change_date.py  child_to_family_link.py  event_detail.py  family_event_detail.py  family_event_structure.py  individual_attribute_structure.py  individual_event_detail.py  individual_event_structure.py  lds_individual_ordinance.py  lds_spouse_sealing.py  multimedia_link.py  note_structure.py  personal_name_pieces.py  personal_name_structure.py  place_structure.py  source_citation.py  source_repository_citation.py  spouse_to_family_link.py  user_reference_number.py
tests/: test_parser.py
tests/element/: __init__.py  test_element.py  test_family.py  test_header.py  test_individual.py  test_note.py  test_object.py  test_repository.py  test_root.py  (+3 more)
(+59 files in other folders)
